--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "trickle",
   "version": "0.0.1",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "express": "*",
-    "sequelize": "~3.17.3",
+    "pg": "~4.4.3",
     "pg-hstore": "~2.3.2",
-    "pg": "~4.4.3"
+    "sequelize": "~3.17.3"
   }
 }
