--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "bcrypt": "^0.8.5",
+    "body-parser": "^1.14.2",
     "express": "*",
+    "jsonwebtoken": "^5.5.4",
     "pg": "~4.4.3",
     "pg-hstore": "~2.3.2",
     "sequelize": "~3.17.3"
