--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "body-parser": "^1.14.2",
     "express": "*",
     "jsonwebtoken": "^5.5.4",
-    "pg": "~4.4.3",
+    "pg": "^4.4.4",
     "pg-hstore": "~2.3.2",
-    "sequelize": "~3.17.3"
+    "sequelize": "^3.17.3"
   }
 }
