--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^5.5.4",
     "pg": "^4.4.4",
     "pg-hstore": "~2.3.2",
+    "request": "^2.69.0",
     "sequelize": "^3.17.3"
   }
 }
