--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "trickle",
   "version": "0.0.1",
   "dependencies": {
+    "apn": "^1.7.5",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "express": "*",
     "jsonwebtoken": "^5.5.4",
+    "numeral": "^1.5.3",
     "pg": "^4.4.4",
     "pg-hstore": "~2.3.2",
     "request": "^2.69.0",
